argo-workflows/overlays/cicd-cluster/virtualservice.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1alpha3
metadata:
  name: argo-workflows-vs
  namespace: argo
spec:
  hosts:
    - "*"
  gateways:
    - argo-workflows-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argo-server.argo.svc.cluster.local
            port:
              number: 2746
